--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@
 }
 
 body {
-    background-color: var(--background-color);
+    background: rgb(3,88,131);
+    background: linear-gradient(90deg, rgba(3,88,131,1) 0%, rgba(0,75,129,1) 50%, rgba(2,48,71,1) 100%);
     width: 100%;
     height: 100%;
     display: flex;
